<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">



    <TextView
        android:id="@+id/title"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="48sp" />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:layout_height="2dp"
        android:background="#FFC107"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:layout_marginBottom="6dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/change"
        android:clickable="true"
        android:textSize="18dp"
        android:textColor="@color/purple_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/signup"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_width="30dp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/warningText"
        android:layout_gravity="center"
        android:textColor="#FF5722"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFC107"/>

</LinearLayout>